--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -44,6 +44,14 @@
 	</div>
 }
 
+<style>
+	/* Adjust the size of the DataTable search input */
+	div.dataTables_wrapper div.dataTables_filter input {
+		width: 150px;
+		margin-right: 10px;
+	}
+</style>
+
 <div class="container-fluid">
 	<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
 	<div class="row">
@@ -129,7 +137,8 @@
 
 					<!-- Table -->
 					<div class="col-lg-12">
-						<table id="entrylog-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+						<div style="overflow-x: auto; max-width: 100%;">
+							<table id="entrylog-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 							<thead>
 								<tr>
 									<th>
@@ -199,6 +208,7 @@
 								}
 							</tbody>
 						</table>
+						</div>
 					</div>
 				</form>
 			</div>
@@ -215,8 +225,16 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p id="checkInDate"></p>
-				<p id="checkOutDate"></p>
+				<table>
+					<tr>
+						<th class="text-start pe-4">Check-in Date</th>
+						<td id="checkInDate" class="text-start"></td>
+					</tr>
+					<tr>
+						<th class="text-start pe-4">Check-out Date</th>
+						<td id="checkOutDate" class="text-start"></td>
+					</tr>
+				</table>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -229,8 +247,8 @@
 <script>
 	function showDatesPopup(checkInDate, checkOutDate) {
 		// Set the content of the modal with the provided dates
-		document.getElementById('checkInDate').innerText = 'Check-in Date: ' + checkInDate;
-		document.getElementById('checkOutDate').innerText = 'Check-out Date: ' + checkOutDate;
+		document.getElementById('checkInDate').innerText = checkInDate;
+		document.getElementById('checkOutDate').innerText = checkOutDate || "-";
 	}
 </script>
 
@@ -303,11 +321,10 @@
 <script>
 	$(document).ready(function () {
 		var table = $('#entrylog-table').DataTable({
-			responsive: true,
+			responsive: false,
 			columnDefs: [
 				{ "orderable": true, "targets": [1, 2] }, // Sortable columns
-				{ "orderable": false, "targets": [0, 3, 4, 5] }, // Non-sortable columns
-				{ "responsivePriority": -1, "targets": [0, 1, 4] } // Disable responsive for status column
+				{ "orderable": false, "targets": [0, 3, 4, 5] } // Non-sortable columns
 			]
 		});
 
