--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -44,6 +44,14 @@
 	</div>
 }
 
+<style>
+    /* Adjust the size of the DataTable search input */
+    div.dataTables_wrapper div.dataTables_filter input {
+        width: 150px;
+        margin-right: 10px;
+    }
+</style>
+
 <div class="container-fluid">
 	<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
 	<div class="row">
@@ -118,9 +126,8 @@
 					</div>
 				</div>
 				
-				<div class="row pb-2">
-					<div class="col-lg-12">
-						<table id="reliefpack-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+				<div class="col-lg-12">
+					<table id="reliefpack-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 							<thead>
 								<tr>
 									<th>#</th>
@@ -141,7 +148,7 @@
 								{
 									<tr style="text-align:center;">
 										<td width="5%">@counter</td>
-										<td width="20%">@item.packID</td>
+										<td width="15%">@item.packID</td>
 										<td width="15%">@item.remainingQty/@item.packQty</td>
 										<td width="20%">@item.distributedAt</td>
 										<td width="15%">
@@ -155,9 +162,18 @@
 											}
 										</td>
 										<td width="15%">
-											<a class="btn btn-success edit-button" href="/disaster/profile/reliefgoodspack/distribute?packID=@item.packID&centerLogID=@Model.logInfo.centerLogID">
-												Distribute
-											</a>
+											@if (@item.status == "Distributed")
+											{
+												<button class="btn btn-primary edit-button" disabled>
+													Distribute
+												</button>
+											}
+											else if (@item.status == "Packed")
+											{
+												<a class="btn btn-success edit-button" href="/disaster/profile/reliefgoodspack/distribute?packID=@item.packID&centerLogID=@Model.logInfo.centerLogID">
+													Distribute
+												</a>
+											}
 										</td>
 										<td width="5%">
 											<div class="d-inline position-relative">
@@ -188,7 +204,6 @@
 								}
 							</tbody>
 						</table>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -249,7 +264,8 @@
 			responsive: true,
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 3] }, // Sortable columns
-				{ "orderable": false, "targets": [2, 4, 5, 6] } // Non-sortable columns
+				{ "orderable": false, "targets": [2, 4, 5, 6] }, // Non-sortable columns
+				{ "responsivePriority": -1, "targets": [0, 1, 4] } // Disable responsive for specific columns
 			]
 		});
 
