--- a/Pages/EvacuationCenter/Profile.cshtml
+++ b/Pages/EvacuationCenter/Profile.cshtml
@@ -45,6 +45,14 @@
 	</div>
 }
 
+<style>
+    /* Adjust the size of the DataTable search input */
+    div.dataTables_wrapper div.dataTables_filter input {
+        width: 150px;
+        margin-right: 10px;
+    }
+</style>
+
 <!-- Breadcrumb -->
 <div class="row pb-2" aria-label="breadcrumb">
     <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
