--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -24,6 +24,14 @@
     </div>
 }
 
+<style>
+    /* Adjust the size of the DataTable search input */
+    div.dataTables_wrapper div.dataTables_filter input {
+        width: 150px;
+        margin-right: 10px;
+    }
+</style>
+
 <div class="bg-light rounded px-2 py-0 my-3">
     <form method="POST" id="saveAllocateEC">
         <h1 class="display-5 fw-bold text-center">Allocate Evacuation Center</h1>
@@ -33,7 +41,8 @@
 
         <div class="row pt-4">
             <div class="col-lg-12">
-                <table id="allocate-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                <div style="overflow-x: auto; max-width: 100%;">
+                    <table id="allocate-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th>
@@ -66,14 +75,8 @@
                         }
                     </tbody>
                 </table>
-
-                @if (!string.IsNullOrEmpty(Model.successMessage))
-                {
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        <strong>@Model.successMessage</strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                }
+                </div>
+                <br />
 
                 <!-- Cancel and Save Selection Button -->
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
@@ -118,13 +121,12 @@
 <script>
     $(document).ready(function () {
         var table = $('#allocate-table').DataTable({
-            responsive: true,
+            responsive: false,
             columnDefs: [
                 { "orderable": true, "targets": [0, 1, 4] }, // Sortable columns
                 { "orderable": false, "targets": [2, 3] } // Non-sortable columns
             ],
-            // Set initial sorting
-            order: [[1, 'asc']]
+            order: [[1, 'asc']] // Set initial sorting
         });
 
         table.columns([2,3]).every(function () {
