--- a/Pages/ECStaff/Index.cshtml
+++ b/Pages/ECStaff/Index.cshtml
@@ -4,6 +4,14 @@
 	ViewData["Title"] = "EC Staff";
 }
 
+<style>
+	/* Adjust the size of the DataTable search input */
+	div.dataTables_wrapper div.dataTables_filter input {
+		width: 150px;
+		margin-right: 10px;
+	}
+</style>
+
 <!-- Breadcrumb -->
 <div class="row" aria-label="breadcrumb">
 	<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
@@ -72,7 +80,8 @@
 			responsive: true,
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 3, 4] }, // Sortable columns
-				{ "orderable": false, "targets": [2, 5, 6, 7] } // Non-sortable columns
+				{ "orderable": false, "targets": [2, 5, 6, 7] }, // Non-sortable columns
+				{ "responsivePriority": -1, "targets": [0, 1, 7] } // Disable responsive for specific columns
 			]
 		});
 
