--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -54,6 +54,12 @@
 	.button-spacing {
 		margin-right: 10px; /* Adjust the margin value as needed */
 	}
+
+	/* Adjust the size of the DataTable search input */
+	div.dataTables_wrapper div.dataTables_filter input {
+		width: 150px;
+		margin-right: 10px;
+	}
 </style>
 
 <div class="content">
@@ -72,10 +78,10 @@
 		<div class="col-12 d-flex align-items-center justify-content-between">
 			<h1><i class="bi bi-people-fill" style="padding: 0 5px 0 5px;"></i>Family</h1>
 			<div class="d-flex justify-content-end align-items-center">
-				@*<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="/family">
+				<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="/family">
 					<i class="bi bi-box-arrow-down"></i> Import .CSV File
 
-				</a>*@
+				</a>
 				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/family/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
 				</a>
@@ -118,7 +124,6 @@
 							<td width="20%">@item.municipalityCity</td>
 							<td width="5%" style="text-align: center;">@item.familySize</td>
 							<td width="5%">
-								<!-- View button -->
 								<a class="btn btn-success edit-button" href="/family/profile/index?familyID=@item.familyID">
 									View
 								</a>
