--- a/Pages/family/profile/distribution/View.cshtml
+++ b/Pages/family/profile/distribution/View.cshtml
@@ -25,6 +25,14 @@
     </div>
 }
 
+<style>
+    /* Adjust the size of the DataTable search input */
+    div.dataTables_wrapper div.dataTables_filter input {
+        width: 150px;
+        margin-right: 10px;
+    }
+</style>
+
 <div class="container-fluid">
 	<input type="hidden" name="familyID" value="@Model.familyInfo.familyID" />
 	<div class="row">
@@ -49,9 +57,8 @@
 		<div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
 			<select class="form-select" id="pageSelect">
 				<option value="/family/profile/index?familyID=@Model.familyInfo.familyID">Information</option>
-				<option value="/family/profile/distribution/index?familyID=@Model.familyInfo.familyID">Relief Distribution Record</option>
+				<option value="/family/profile/distribution/index?familyID=@Model.familyInfo.familyID" selected>Relief Distribution Record</option>
 				<option value="/family/profile/vulnerability?familyID=@Model.familyInfo.familyID">Vulnerability Assessment</option>
-
 			</select>
 		</div>
 
