Modified search bar size and responsive tables pt.3

--- a/Pages/Disaster/Profile/staffassignment/Index.cshtml
+++ b/Pages/Disaster/Profile/staffassignment/Index.cshtml
@@ -381,7 +381,7 @@
 			columnDefs: [
 				{ "orderable": true, "targets": [1] }, // Sortable columns
 				{ "orderable": false, "targets": [0, 2, 3, 4, 5] } // Non-sortable columns
-				//{ "responsivePriority": -1, "targets": [0, 1, 3, 4] } // Disable responsive for status column
+				//{ "responsivePriority": -1, "targets": [0, 1, 3, 4] } // Disable responsive for specific columns
 			]
 		});
 
