--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -4,6 +4,7 @@
 	ViewData["Title"] = "Evacuation Center";
 }
 
+<!-- Alert Banners -->
 @if (!string.IsNullOrEmpty(Request.Query["successMessage"]))
 {
 	<div id="success-notification" class="position-fixed top-0 end-0 p-3" style="z-index: 1000;">
@@ -42,6 +43,14 @@
 		</div>
 	</div>
 }
+
+<style>
+	/* Adjust the size of the DataTable search input */
+	div.dataTables_wrapper div.dataTables_filter input {
+		width: 150px;
+		margin-right: 10px;
+	}
+</style>
 
 <!-- Breadcrumb -->
 <div class="row pb-2" aria-label="breadcrumb">
