--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -120,6 +120,7 @@
 	$(document).ready(function () {
 		var table = $('#disaster-table').DataTable({
 			responsive: true,
+			pageLength: 100;
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 4] }, // Sortable columns
 				{ "orderable": false, "targets": [2, 3, 5] } // Non-sortable columns
