--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -122,6 +122,7 @@
     $(document).ready(function () {
         var table = $('#allocate-table').DataTable({
             responsive: false,
+            pageLength: 100;
             columnDefs: [
                 { "orderable": true, "targets": [0, 1, 4] }, // Sortable columns
                 { "orderable": false, "targets": [2, 3] } // Non-sortable columns
