--- a/Pages/Disaster/Profile/reliefgoodspack/Add.cshtml
+++ b/Pages/Disaster/Profile/reliefgoodspack/Add.cshtml
@@ -136,6 +136,7 @@
         // Making the table responsive
         var table = $('#inclusion-table').DataTable({
             responsive: false,
+            pageLength: 100;
             columnDefs: [
                 { "orderable": true, "targets": [1, 2, 3, 4] }, // Sortable columns
                 { "orderable": false, "targets": [0, 5] } // Non-sortable columns
