--- a/Pages/Disaster/Profile/reliefgoodspack/Record.cshtml
+++ b/Pages/Disaster/Profile/reliefgoodspack/Record.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.Profile.reliefgoodspack.ViewModel
+@model AgapayAidSystem.Pages.disaster.profile.reliefgoodspack.RecordModel
 @{
-    ViewData["Title"] = "Pack Inclusions";
+	ViewData["Title"] = "Distribution Record";
 }
 
 <!-- Alert Banners -->
@@ -93,7 +93,7 @@
                 <!-- Title -->
                 <div class="row">
                     <div class="col d-flex align-items-center">
-                        <h1>Pack Inclusions</h1>
+                        <h1>Distribution Record</h1>
                     </div>
                 </div>
                 <div class="row">
@@ -105,28 +105,28 @@
                 <!-- Table -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <table id="pack-inclusion" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                        <table id="record-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
                             <thead>
                                 <tr style="vertical-align:text-top;">
                                     <th>#</th>
-                                    <th>Item</th>
-                                    <th>Type</th>
-                                    <th>Qty per Pack</th>
-                                    <th>Total Qty</th>
-                                    <th>Unit Measure</th>
+                                    <th>Family Serial No.</th>
+                                    <th>Received by<br /></th>
+                                    <th>Distributed by</th>
+                                    <th>Qty</th>
+                                    <th>Receive Date</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @{ var counter = 1; }
-                                @foreach (var item in Model.listPackInclusion)
+                                @foreach (var item in Model.listDistribution)
                                 {
-                                    <tr>
+                                    <tr style="text-align:center;">
                                         <td width="5%">@counter</td>
-                                        <td width="25%">@item.itemName</td>
-                                        <td width="15%">@item.itemType</td>
-                                        <td width="15%">@item.qty</td>
-                                        <td width="15%">@item.totalQty</td>
-                                        <td width="25%">@item.unitMeasure</td>
+                                        <td width="25%" style="text-align:center;">@item.serialNum</td>
+                                        <td width="20%">@item.memberFullName</td>
+                                        <td width="20%">@item.staffFullName</td>
+                                        <td width="10%" style="text-align:center;">@item.qty</td>
+                                        <td width="20%" style="text-align:center;">@item.receiveDate</td>
                                     </tr>
                                     counter++;
                                 }
@@ -142,85 +142,12 @@
 <!-- Making the table responsive -->
 <script>
     $(document).ready(function () {
-        var table = $('#pack-inclusion').DataTable({
+        var table = $('#record-table').DataTable({
             responsive: true,
             pageLength: 100;
             columnDefs: [
-                { "orderable": true, "targets": [0, 1, 3, 4, 5] }, // Sortable columns
-                { "orderable": false, "targets": [2] } // Non-sortable columns
+                { "orderable": true, "targets": [0, 1, 2, 3, 4, 5] } // Sortable columns
             ]
         });
-
-        table.columns([2]).every(function () {
-            var column = this;
-            var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
-            var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
-            var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
-
-            function updateFilterButton() {
-                var hasActiveFilter = column.search() !== '';
-                btn.toggleClass('btn-warning', hasActiveFilter);
-            }
-
-            column.data().unique().sort().each(function (d, j) {
-                menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
-                    '<label class="form-check-label ps-1">' + d + '</label></div>');
-            });
-
-            menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
-                '<label class="form-check-label ps-1">Select All</label></div>');
-
-            menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
-
-            menu.find('.form-check-input, .clear-filter').on('click', function () {
-                var checked = $(this).prop('checked');
-
-                if ($(this).hasClass('form-check-input')) {
-                    if ($(this).val() === 'select-all') {
-                        menu.find('.form-check-input').prop('checked', checked);
-                    } else if (!checked) {
-                        menu.find('.form-check-input[value="select-all"]').prop('checked', false);
-                    }
-                } else {
-                    menu.find('.form-check-input').prop('checked', false);
-                    menu.find('.form-check-input[value="select-all"]').prop('checked', false);
-                }
-
-                var selectedValues = menu.find('.form-check-input:checked').map(function () {
-                    return $(this).val();
-                }).get();
-
-                column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
-                updateFilterButton();
-            });
-            updateFilterButton();
-        });
     });
-</script>
-
-<!-- Sidebar (Mobile) -->
-<script>
-    // Get the current page URL
-    var currentPage = window.location.pathname.toLowerCase();
-
-    // Get the select element
-    var pageSelect = document.getElementById('pageSelect');
-
-    // Loop through the options and set the selected attribute if it matches the current page
-    for (var i = 0; i < pageSelect.options.length; i++) {
-        if (pageSelect.options[i].value.toLowerCase().includes(currentPage)) {
-            pageSelect.options[i].selected = true;
-            break; // Exit the loop once the first match is found
-        }
-    }
-
-    // Function to handle page redirection
-    function redirectToSelectedPage() {
-        var selectedOption = pageSelect.options[pageSelect.selectedIndex];
-        var selectedValue = selectedOption.value;
-        window.location.href = selectedValue;
-    }
-
-    // Attach the onchange event to the select element
-    pageSelect.addEventListener('change', redirectToSelectedPage);
 </script>
