--- a/Pages/disaster/profile/staffassignment/Add.cshtml
+++ b/Pages/disaster/profile/staffassignment/Add.cshtml
@@ -178,6 +178,7 @@
     $(document).ready(function () {
         var table = $('#entrylog-table').DataTable({
             responsive: true,
+            pageLength: 100;
             columnDefs: [
                 { "orderable": true, "targets": [1, 3, 4] }, // Sortable columns
                 { "orderable": false, "targets": [0, 2] }, // Non-sortable columns
